k8s/02-webapp/01_deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
  namespace: front
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
