k8s/02-webapp/03_ingress_route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp
  namespace: front
  labels:
    app: webapp
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`app3.company.com`)
    kind: Rule
    services:
    - name: webapp
      port: 80
